--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,34 @@
-version: '3.1'
+version: '3.8'
+
 services:
   db:
     image: mysql:5.7  
+    restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ""  
+      MYSQL_ROOT_PASSWORD: rootpass  
       MYSQL_DATABASE: students
       MYSQL_USER: root
-      MYSQL_PASSWORD: ""  
+      MYSQL_PASSWORD: rootpass  
     volumes:
       - db_data:/var/lib/mysql
     ports:
       - "3307:3306"  
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      retries: 5
+      timeout: 5s
+
   api:
     build: .
+    restart: always
     ports:
       - "8080:3000"
-    environment:
-      DB_HOST: db  
-      DB_USER: root  
-      DB_PASSWORD: "" 
-      DB_DATABASE: students
+    env_file:
+      - .env  
     depends_on:
-      - db
+      db:
+        condition: service_healthy 
+
 volumes:
   db_data:
